# lnt-sovereign

./: .gitignore  404.html  Dockerfile  LICENSE  MANIFEST.in  README.md  all_files.txt  files_at_start.txt  index.html  lnt_cli.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml  docs.yml  mlops.yml  pipeline.yml  publish.yml  workflow.yml
.test_lnt_state/: lock.mdb
adr_001/: index.html
api/: index.html
api_reference/: index.html
architecture/: index.html
docs/: adr_001.md  api.md  api_reference.md  architecture.md  faq.md  index.md  integration.md  mlops_integration.md  playground.md  registry.md  sovereign.md  specifications.md  whitepaper.md
docs/metrics/: sovereign_health.html
examples/: policy_grant.txt  sample_proposal.json  sdk_demo.py
examples/mlops/: lnt-sovereign.yml
faq/: index.html
integration/: index.html
integrations/: stripe.py
lnt_sovereign/: __init__.py  cli.py  client.py
lnt_sovereign/core/: __init__.py  agents.py  analytics.py  bias.py  compiler.py  dashboard.py  database.py  exceptions.py  feedback.py  formal.py  generator.py  jit_kernel.py  kernel.py  monitor.py  nano_inference.py  neural.py  optimized_kernel.py  scale.py  state.py  telemetry.py  topology.py
lnt_sovereign/manifests/examples/: credit_score_v1.json  healthcare_triage.json
manifests/examples/: credit_score_v1.json  crs_profile.json  healthcare_triage.json  visa_application.json
manifests/test/: temporal.json
mlops_integration/: index.html
playground/: index.html
registry/: index.html
sandbox/: quickstart.py  stress_test.py
scripts/: benchmark_math.py  export_audit.py  generate_transparency_report.py  playground_demo.py
search/: search_index.json
specifications/: index.html
tests/: __init__.py  benchmark_classical_vs_llm.py  certify_sg1.py  performance_bench.py  test_agnostic_os.py  test_analytics_suite.py  test_cli.py  test_lnt.py  test_persistence_lmdb.py  test_sdk_integration.py  test_server_auth.py  test_telemetry_privacy.py  test_temporal_logic.py  test_upgrades.py  verify_pypi_dist.py
tests/assets/: failing_proposal.json
tests/core/: test_dag_vectorization.py  test_kernel_vectorization.py
tests/formal/: test_dead_code.py  test_logic_paradoxes.py
whitepaper/: index.html
