[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lnt-sovereign"
version = "1.0.4"
authors = [
  { name="wassmi", email="algasim.w@gmail.com" },
]
description = "High-performance neuro-symbolic verification layer for AI validation and logic-based guardrails."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography"
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "numpy",
    "numba",
    "sqlalchemy",
    "httpx",
    "z3-solver",
    "typer[all]",
    "rich",
    "lmdb"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "bandit",
    "build",
    "twine"
]

[project.scripts]
lnt = "lnt_sovereign.cli:app"

[project.urls]
"Homepage" = "https://github.com/wassmi/lnt-sovereign"
"Bug Tracker" = "https://github.com/wassmi/lnt-sovereign/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lnt_sovereign*"]
exclude = ["lnt_sovereign.vault*", "lnt_sovereign.manifests.mega*"]

[tool.setuptools.package-data]
"lnt_sovereign.manifests.examples" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "S", "I"]
# E501: Line too long (style)
# S311: Standard pseudo-random generators (required for Logic Kernel stats)
ignore = ["E501", "S311", "B904", "B008", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "F841", "S110", "S112", "E402", "S605", "I001", "E722"]
"tests/*" = ["S101", "F841", "S110", "S112", "E402", "S605", "I001", "E722"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
targets = ["lnt_sovereign"]
skips = ["B105", "B110", "B112"]
